<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F0E3">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="ENGR.Kashif Mirza"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toStartOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile"/>
        <TextView
            android:id="@+id/tv_device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/black"
            android:text=""
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_point"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:cardMaxElevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_device_id">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_total_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/str_total_points"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"/>
                <TextView
                    android:id="@+id/tv_link_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/str_link_1_duration"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_points"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"/>
                <TextView
                    android:id="@+id/tv_link_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/str_link_2_duration"
                    app:layout_constraintTop_toBottomOf="@id/tv_link_one"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"/>
                <TextView
                    android:id="@+id/tv_link_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/str_link_3_duration"
                    app:layout_constraintTop_toBottomOf="@id/tv_link_two"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"/>
                <TextView
                    android:id="@+id/tv_link_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/str_link_4_duration"
                    app:layout_constraintTop_toBottomOf="@+id/tv_link_three"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"/>
                <TextView
                    android:id="@+id/tv_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14ssp"
                    android:text="0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/tv_link_one_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="0s"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_points"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/tv_link_two_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="0s"
                    app:layout_constraintTop_toBottomOf="@id/tv_link_one"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/tv_link_three_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="0s"
                    app:layout_constraintTop_toBottomOf="@id/tv_link_two"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/tv_link_four_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:text="0s"
                    app:layout_constraintTop_toBottomOf="@+id/tv_link_three"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"/>
                <TextView
                    android:id="@+id/tv_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_reset"
                    app:layout_constraintTop_toBottomOf="@+id/tv_link_four"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <ImageView
            android:id="@+id/iv_youtube"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/img_youtube"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_point"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:alpha="0.9"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>